[backend] feat(stix): wip (#3511)